--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
+    <!--<types>
         <members>*</members>
         <name>ApexClass</name>
     </types>
@@ -31,6 +31,18 @@
     <types>
         <members>*</members>
         <name>StaticResource</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>PermissionSet</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>AuthProvider</name>
+    </types>-->
+    <types> 
+        <members>*</members> 
+        <name>NamedCredential</name> 
     </types>
     <version>56.0</version>
 </Package>
